# lab_eval

./: README.md  pyproject.toml  setup.cfg
examples/: lab_babyesp.cfg  lab_babyesp.py  lab_caesar.cfg  lab_caesar.py
src/lab_eval/: eval_class.py  eval_lab.py
src/pylab_evaluation/: .eval_class.py.swp  .eval_lab.py.swp  __init__.py  eval_class.py  eval_lab.py
src/pylab_evaluation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_baby_esp.py
tests/baby_esp22/: lab_grade_list.json
tests/baby_esp22/eval_dir/: xxx0501_eval.py  yyy2401_eval.py  zzz3104_eval.py
tests/baby_esp22/lab/lastname1,_firstname1_5696540_assignsubmission_file_/: cipher_obj.py
tests/baby_esp22/lab/lastname3,_firstname3_5696540_assignsubmission_file_/: aes_gcm.py
tests/baby_esp22/moodle/lastname1,_firstname1_5696540_assignsubmission_file_/: pad.py
tests/baby_esp22/moodle/lastname3,_firstname3_5696540_assignsubmission_file_/: nonce.py
tests/test_class/: courseid_29228_participants.json
tests/test_class/moodle_archive/lastname1,_firstname1_5696540_assignsubmission_file_/: sa.py
tests/test_single_lab/: score_list.json
tests/test_single_lab/evaluation/: john_doe_eval.py
tests/test_single_lab/student/: esp.py
