[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pylab_evaluation"
version = "0.0.1"
authors = [
  { name="Daniel Migault", email="mglt.biz@gmail.com" },
]
description = "A package to evaluate python3 scripts submitted by students"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mglt/pylab-evaluation"

